Add loading indicator

--- a/OktaneDemo/Okta.plist
+++ b/OktaneDemo/Okta.plist
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>issuer</key>
-        <string>https://oktane-app-dev.oktapreview.com</string>
-        <key>clientId</key>
-        <string>0oabmleuwnKdEux5m0h7</string>
-        <key>redirectUri</key>
-        <string>com.okta.oktane17.oktanedemo://callback</string>
-        <key>scopes</key>
-        <array>
-            <string>offline_access</string>
-            <string>openid</string>
-            <string>profile</string>
-        </array>
-    </dict>
+<dict>
+	<key>issuer</key>
+	<string>https://oktane-app-dev.oktapreview.com</string>
+	<key>clientId</key>
+	<string>0oabmleuwnKdEux5m0h7</string>
+	<key>redirectUri</key>
+	<string>com.okta.oktane17.oktanedemo:/callback</string>
+	<key>scopes</key>
+	<array>
+		<string>offline_access</string>
+		<string>openid</string>
+		<string>profile</string>
+	</array>
+</dict>
 </plist>
