--- a/OktaneDemo/Info.plist
+++ b/OktaneDemo/Info.plist
@@ -24,10 +24,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.oktapreview.oktane-app-dev</string>
+			<string>com.oktapreview.atko-corporation-application</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.oktapreview.oktane-app-dev</string>
+				<string>com.oktapreview.atko-corporation-application</string>
 			</array>
 		</dict>
 	</array>
