--- a/OktaneDemo/Okta.plist
+++ b/OktaneDemo/Okta.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>redirectUri</key>
-	<string>com.oktapreview.oktane-app-dev:/callback</string>
+	<string>com.oktapreview.atko-corporation-application:/callback</string>
 	<key>issuer</key>
-	<string>https://oktane-app-dev.oktapreview.com</string>
+	<string>https://atko-corporation-application.oktapreview.com</string>
 	<key>clientId</key>
-	<string>0oabnyiafiV947fC50h7</string>
+	<string>0oabmleuwnKdEux5m0h7</string>
 	<key>scopes</key>
 	<array>
 		<string>offline_access</string>
